Fix hex spacing

--- a/contact/css/contact.css
+++ b/contact/css/contact.css
@@ -44,9 +44,9 @@
   margin-bottom: -125px;
   position: relative;
 }
-.hex.r {
+/*.hex.r {
   margin-left: 235px;
-}
+}*/
 .hex .left {
   float: left;
   width: 0;
